k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: app-ingress 
spec: 
  ingressClassName: nginx 
  rules: 
    - host: abhicloud.online
      http: 
        paths: 
          - path: / 
            pathType: Prefix 
            backend: 
              service: 
                name: frontend-svc 
                port: 
                  number: 80 
          - path: /api 
            pathType: Prefix 
            backend: 
              service: 
                name: backend-svc 
                port: 
                  number: 8080
